Add comments to Nginx config and env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Copy to .env and fill values. Never commit .env
 DJANGO_SECRET_KEY=your-production-secret-key
 DJANGO_DEBUG=0
 DJANGO_ALLOWED_HOSTS=yourdomain.uz,www.yourdomain.uz
