--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      CI: "true"
       IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/devops-blog
 
     steps:
@@ -27,11 +28,11 @@ jobs:
 
       - name: Lint with flake8
         run: |
-          flake8
+          flake8 blog devops_project manage.py
 
       - name: Run tests
         run: |
-          pytest
+          pytest -v --tb=short
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
